// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auxiliary functions to reducer should show a danger icon if the host is not compliant in any profile 1`] = `
<svg
  aria-hidden={true}
  aria-labelledby={null}
  fill="currentColor"
  height="1em"
  role="img"
  style={
    Object {
      "color": "var(--pf-global--danger-color--100)",
    }
  }
  viewBox="0 0 512 512"
  width="1em"
>
  <path
    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
    transform=""
  />
</svg>
`;

exports[`auxiliary functions to reducer should show a danger icon if the host is not compliant in some profile 1`] = `
<svg
  aria-hidden={true}
  aria-labelledby={null}
  fill="currentColor"
  height="1em"
  role="img"
  style={
    Object {
      "color": "var(--pf-global--danger-color--100)",
    }
  }
  viewBox="0 0 512 512"
  width="1em"
>
  <path
    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
    transform=""
  />
</svg>
`;

exports[`auxiliary functions to reducer should show a question mark icon if the host has no rules passed or failed 1`] = `
<svg
  aria-hidden={true}
  aria-labelledby={null}
  fill="currentColor"
  height="1em"
  role="img"
  style={
    Object {
      "color": "var(--pf-global--disabled-color--100)",
    }
  }
  viewBox="0 0 512 512"
  width="1em"
>
  <path
    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
    transform=""
  />
</svg>
`;

exports[`auxiliary functions to reducer should show a success icon if the host is compliant in all profiles 1`] = `
<svg
  aria-hidden={true}
  aria-labelledby={null}
  fill="currentColor"
  height="1em"
  role="img"
  style={
    Object {
      "color": "var(--pf-global--success-color--100)",
    }
  }
  viewBox="0 0 512 512"
  width="1em"
>
  <path
    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
    transform=""
  />
</svg>
`;
